<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="nz.aut.dms.excusegenerator.AboutActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#007aff" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:background="@mipmap/gradie" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="ABOUT"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="40dp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:fillViewport="false"
        android:background="#ffffffff">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="7dp"
            android:background="#ffffffff">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_p1"
                android:id="@+id/textView4"
                android:textSize="21sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:paddingRight="7dp"
                android:paddingLeft="7dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_p2"
                android:textSize="21sp"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:paddingRight="7dp"
                android:paddingLeft="7dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-medium"
                android:text="@string/information_h"
                android:id="@+id/textView6"
                android:textSize="21sp"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:paddingRight="7dp"
                android:paddingLeft="7dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/information_p1"
                android:fontFamily="sans-serif-light"
                android:textSize="21sp"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/information_p2"
                android:fontFamily="sans-serif-light"
                android:textSize="21sp"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:paddingRight="7dp"
                android:paddingLeft="7dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/information_p3"
                android:fontFamily="sans-serif-light"
                android:textSize="21sp"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" />



            </LinearLayout>
    </ScrollView>


</LinearLayout>
